Prevent overflow on mobile

--- a/shared/css/style.css
+++ b/shared/css/style.css
@@ -21,6 +21,7 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body {
@@ -32,6 +33,7 @@ body>.wrapper {
     min-height: calc(100% - 4rem);
     padding-bottom: 4rem;
     position: relative;
+    overflow-x: hidden;
 }
 
 footer {
